--- a/Lab2/cocktail_book/src/view/Main.css
+++ b/Lab2/cocktail_book/src/view/Main.css
@@ -3,3 +3,31 @@
     padding: 10px;
     background: bisque;
 }
+
+.loginForm {
+    margin: 10px;
+    padding: 10px;
+    text-align: start;
+    align-self: center;
+    width: 500px;
+    height: 250px;
+}
+
+.loginForm span {
+    font-size: 18px;
+    margin: 5px;
+    padding: 10px;
+}
+
+.btn-primary {
+    font-size: large;
+    color: white;
+    text-align: center;
+    background-color: green;
+    width: 100px;
+    height: 50px;
+    border: #282c34;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 20px;
+}
