--- a/Lab3/cocktail_book_with_api/src/App.css
+++ b/Lab3/cocktail_book_with_api/src/App.css
@@ -57,7 +57,10 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   padding: 1em;
-  background-color: lightgray;
+  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgb(71, 71, 71);
+  margin: 5px;
 }
 
 .signIn {
@@ -69,26 +72,35 @@
 
 .navBarLogo {
   cursor: pointer;
+  font-size: 18px;
+  font-weight: bolder;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgb(71, 71, 71);
+  margin: 20px;
   text-align: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  min-width: 40%;
+  height: 90%;
 }
 
 .card-text {
   text-align: justify;
   padding: inherit;
-  margin: inherit;
+  margin: 10px;
 }
 
 .card-img {
-  width: 100%;
-  height: 100%;
+  width: 40%;
+  height: 40%;
+  border-radius: 10px;
+
 }
 
 h1 {
