--- a/Lab3/cocktail_book_with_api/src/view/Main.css
+++ b/Lab3/cocktail_book_with_api/src/view/Main.css
@@ -1,7 +1,7 @@
 .mainContainer {
-    margin: 10px;
-    padding: 10px;
-    background: bisque;
+    margin: 0px;
+    padding: 5px;
+    background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
 }
 
 .loginForm {
